--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.14.0",
+    "@babel/core": "^7.0.0-beta.46",
     "jest-expo": "~27.0.0",
+    "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,9 +21,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint": "^3.19.0",
     "expo": "^27.0.1",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react-native": "^0.55.3",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
