--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "^0.55.3",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
