--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "^0.55.3",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
